[gd_scene load_steps=10 format=2]

[ext_resource path="res://menu.gd" type="Script" id=1]
[ext_resource path="res://asset/Imagenes/9501281d.jpg" type="Texture" id=2]
[ext_resource path="res://asset/musica/menu.ogg" type="AudioStream" id=3]
[ext_resource path="res://asset/Imagenes/creditos.jpeg" type="Texture" id=4]
[ext_resource path="res://asset/Imagenes/play1.jpeg" type="Texture" id=5]
[ext_resource path="res://asset/musica/sonido de start.ogg" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "boton_creditos_open"
tracks/0/type = "value"
tracks/0/path = NodePath("salir_credito:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("salir_credito:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("salir_credito:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Label:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("salir_credito:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Node2D" type="Node2D"]
position = Vector2( 536, 263 )
script = ExtResource( 1 )

[node name="play" type="Sprite" parent="."]
position = Vector2( -22.6557, 36.0383 )
scale = Vector2( 0.797983, 0.46886 )
texture = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="silencio" type="Button" parent="."]
margin_left = -532.838
margin_top = -260.28
margin_right = -332.838
margin_bottom = -160.28
text = "silencio"

[node name="quincho" type="Button" parent="."]
margin_left = 285.13
margin_top = 234.498
margin_right = 485.13
margin_bottom = 334.498
text = "Quincho"

[node name="creditos" type="Button" parent="."]
margin_left = -534.152
margin_top = 162.455
margin_right = -237.152
margin_bottom = 355.455
icon = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -83.5497
margin_top = 66.0717
margin_right = 77.4503
margin_bottom = 193.072
text = "Game design:
Artistas:
Programadores: 
Productor:"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/boton_creditos_open = SubResource( 1 )
anims/creditos = SubResource( 2 )
anims/criditos_salir = SubResource( 3 )

[node name="salir_credito" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -65.2265
margin_top = 236.212
margin_right = 49.7735
margin_bottom = 312.212
text = "Salir de creditos"

[node name="Salir" type="Button" parent="."]
margin_left = 290.255
margin_top = -264.931
margin_right = 490.255
margin_bottom = -164.931
text = "Salir"

[node name="play2" type="Button" parent="."]
margin_left = -204.494
margin_top = -51.7978
margin_right = 170.506
margin_bottom = 93.2022
icon = ExtResource( 5 )

[node name="Audioplay" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="pressed" from="silencio" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="quincho" to="." method="_on_quincho_pressed"]
[connection signal="pressed" from="creditos" to="." method="_on_creditos_pressed"]
[connection signal="pressed" from="salir_credito" to="." method="_on_salir_credito_pressed"]
[connection signal="pressed" from="Salir" to="." method="_on_Salir_pressed"]
[connection signal="pressed" from="play2" to="." method="_on_play2_pressed"]
